# anon-artifact

./: CoAR.opam  Dockerfile  README.md  main.ml
Evaluation Results/: Evaluation Results.xlsx
Evaluation Results/2LS/: run_2LS.sh
Evaluation Results/AProVE/: run_AProVE.sh
Evaluation Results/Athena/: run_Athena.sh
Evaluation Results/CPAchecker/: run_CPAchecker.sh
Evaluation Results/CPAchecker/output/: ARG.dot  ARGRefinements.dot  ARGSimplified.dot  Counterexample.117.html  Counterexample.17.html  Counterexample.3.html  Counterexample.45.html  Counterexample.5.html  Counterexample.7.html  Report.html  cfa.dot
Evaluation Results/MuVal/: run_MuVal.sh
Evaluation Results/UAutomizer/: run_UAutomizer.sh
config/solver/: dbg_gspacer.json  dbg_gspacer_sol.json  gspacer.json  gspacer_sol.json
lib/: dune  solver.ml
lib/MuVal/: solver.ml
lib/PCSat/: solPrinter.ml  solver.ml
lib/PCSat/classification/: TB_Classifier.ml  WFClassifier.ml  dune
lib/PCSat/preprocessing/: preprocessor.ml  pvarEliminator.ml
lib/PCSat/qualifier/: dune  generator.ml
lib/PCSat/synthesis/: solutionTemplate.ml  synthesizer.ml
lib/PCSat/template/: FNPredicate.ml  FNPredicateFlex.ml  NEPredicate.ml  regEx.ml  (+11 more)
lib/Z3Smt/: z3interface.ml
lib/ast/: evaluator.ml  logicOld.ml  qual.ml  templ.ml  typeinf.ml
lib/pCSP/: dune  problem.ml  problem.mli
lib/pCSPSolver/: config.ml  dune  solver.ml
script/: run_bench.sh
script/fse2026/: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  create_apptainer.sh  run_bench.sh  run_bench_c.sh  solver.sh  test_llvm2kittel.sh
(+810 files in other folders)
